add: Set initial values using gsap, to elements that will be animated later.

--- a/index.html
+++ b/index.html
@@ -44,35 +44,35 @@
       </div>
 
       <div class="menu-logo">
-        <div>P10.</div>
+        <div>PUSH10KAR</div>
       </div>
 
       <div class="menu-links-wrapper">
-        <div class="menu-links">
+        <div class="menu-link">
           <a href="#">
             <span>Index</span>
             <span>Index</span>
           </a>
         </div>
-        <div class="menu-links">
+        <div class="menu-link">
           <a href="#">
             <span>Persona</span>
             <span>Persona</span>
           </a>
         </div>
-        <div class="menu-links">
+        <div class="menu-link">
           <a href="#">
             <span>Biography</span>
             <span>Biography</span>
           </a>
         </div>
-        <div class="menu-links">
+        <div class="menu-link">
           <a href="#">
             <span>Work</span>
             <span>Work</span>
           </a>
         </div>
-        <div class="menu-links">
+        <div class="menu-link">
           <a href="#">
             <span>Journal</span>
             <span>Journal</span>
