--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
 
       <div class="menu-logo">
-        <div>PUSH10KAR</div>
+        <div>PUSH10KAR.</div>
       </div>
 
       <div class="menu-links-wrapper">
@@ -89,6 +89,6 @@
       </section>
     </div>
 
-    <script type="module" src="/src/ts/script.js"></script>
+    <script type="module" src="/src/ts/script.ts"></script>
   </body>
 </html>
