feat(menu): implement menu links container sliding logic

--- a/index.html
+++ b/index.html
@@ -19,27 +19,28 @@
     <div class="menu-overlay">
       <div class="menu-content">
         <div class="menu-col">
-          <p>Codegrid</p>
-          <p>Shoreline Drive</p>
-          <p>Oslo</p>
+          <p>Mobile & Web Developer</p>
+          <p>Competitive Programmer</p>
+          <p>Open Source Contributor</p>
           <br />
-          <p>Contact</p>
-          <p>hello@pushkar.com</p>
+          <p>Tech Stack</p>
+          <p>React Native / MERN / C/C++</p>
           <br />
-          <p>Direct</p>
-          <p>+91 8600004826</p>
+          <p>Based In</p>
+          <p>Pune, India</p>
         </div>
         <div class="menu-col">
-          <p>Instagram</p>
-          <p>Are.na</p>
-          <p>Vimeo</p>
+          <p>Github</p>
+          <p>LinkedIn</p>
+          <p>Leetcode</p>
+          <p>Codeforces</p>
+          <p>X</p>
           <br />
-          <p>Language</p>
-          <p>Sanskrit</p>
+          <p>Contact</p>
+          <p>pushkargavade@gmail.com</p>
           <br />
-          <p>Credits</p>
-          <p>Imprints</p>
-          <p>Ref. 00492X</p>
+          <p>Direct</p>
+          <p>+91-9359875638</p>
         </div>
       </div>
 
